# pytorch322

./: .gitignore  README.md  setup.cfg
src/torch322/: __init__.py
src/torch322/nn/: __init__.py  conv.py  functional.py  linear.py
src/torch322/nn/functional/: __init__.py  activation.py  cat_pooling.py  miscellaneous.py  pad.py  padding.py
src/torch322/nn/modules/: __init__.py  activation.py  conv.py  linear.py  normalization.py  padding.py  pooling.py
src/torch322/nn/utils/: __init__.py  module_ext.py  module_extra.py
src/torch322/utils/: __init__.py  tensor_checking.py
src/torch322/utils/data/: ParallelDataset.py  __init__.py  sampler.py  sampling.py
tests/data/: expected_pad322_result.json  expected_pad_with_indicator_channels_result.json
tests/test_torch322/: unittest_utils.py
tests/test_torch322/nn/: test_linear.py
tests/test_torch322/test_nn/: test_conv.py  test_functional.py
tests/test_torch322/test_nn/test_functional/: test_activation.py  test_cat_pooling.py  test_miscellaneous.py  test_pad.py  test_padding.py
tests/test_torch322/test_nn/test_modules/: test_conv.py  test_linear.py  test_normalization.py
tests/test_torch322/test_nn/test_utils/: test_module_ext.py  test_module_extra.py
tests/test_torch322/test_utils/: test_tensor_checking.py
tests/test_torch322/test_utils/test_data/: test_parallel_dataset.py  test_sampler.py  test_sampling.py
